aggiustato frontend (da finire)

--- a/src/style/Global.css
+++ b/src/style/Global.css
@@ -1,6 +1,6 @@
 :root{
-    --det-color: #ff3c00;
-    --sec-color: #1f37f0;
+    --det-color: #7177f0;
+    --sec-color: #1e1818;
     --acc-color: #ffffff;
 }
 
