aggiunto immagini nel file product.js

--- a/src/style/Carousel.css
+++ b/src/style/Carousel.css
@@ -3,7 +3,7 @@
     width: 3rem !important;
     border-radius: 9999px !important;
     padding: 0px !important;
-    background-color: var(--det-color) !important;
+    background-color: var(--acc-color) !important;
     border: none !important;
 }
 
