--- a/src/style/Global.css
+++ b/src/style/Global.css
@@ -1,7 +1,7 @@
 :root{
-    --det-color: #7177f0;
-    --sec-color: #1e1818;
-    --acc-color: #ffffff;
+    --det-color: #212061;
+    --sec-color: #60bd5c;
+    --acc-color: #c3db60;
 }
 
 /* colore testo */
