--- a/src/style/Hero.css
+++ b/src/style/Hero.css
@@ -93,7 +93,7 @@
   }
 
   .btn-order{
-    background-color: var(--det-color) !important;
+    background-color: var(--acc-color) !important;
     border: none;
   }
 
