sistemate card dei prodotti del CategorySection, sistemato modal e carrello

--- a/src/style/CategorySection.css
+++ b/src/style/CategorySection.css
@@ -1,3 +1,12 @@
 .border-card{
     border: 3px solid var(--acc-color);
 }
+
+.bg-modal{
+    background-color: var(--det-color) !important;
+}
+
+.btn-modal{
+    background-color: var(--sec-color) !important;
+    color: var(--det-color) !important;
+}
