--- a/src/style/Food.css
+++ b/src/style/Food.css
@@ -1,10 +1,5 @@
-.food-card{
-    width: 325px;
-    height: 400px;
-    border: 4px solid var(--sec-color);
- }
-
-.title-card{
-    background: linear-gradient(135deg, rgba(255, 60, 0, 0.7), rgba(255, 255, 255, 0));
+.btn-cart-order{
+    background-color: var(--acc-color) !important;
+    color: var(--sec-color);
 }
 
