--- a/src/style/Hero.css
+++ b/src/style/Hero.css
@@ -88,10 +88,12 @@
   .btn-order{
     background-color: var(--acc-color) !important;
     border: none;
+    color: var(--sec-color)
   }
 
   .btn-app{
-    background-color: var(--det-color)
+    border: 2px solid var(--acc-color);
+    /* background-color: var(--acc-color) */
   }
 
   
