--- a/src/style/Checkout.css
+++ b/src/style/Checkout.css
@@ -1,5 +1,6 @@
 .bord-form{
-    border: 2px solid var(--acc-color);
+    border: 3px solid var(--acc-color);
+    background-color: var(--det-color);
 }
 
 .total-bord{
