--- a/src/style/Hero.css
+++ b/src/style/Hero.css
@@ -76,17 +76,17 @@
 }
 
   .txt-border{
-    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: var(--sec-color);
   }
 
   .txt-border2{
-    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: var(--det-color);
   }
 
   .txt-border3{
-    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: var(--det-color);
   }
 
@@ -105,3 +105,91 @@
     border: 3px solid var(--acc-color);
   }
   
+  @keyframes appear {
+    from {
+      opacity: 0;
+      scale: 0.5;
+    }
+    to {
+      opacity: 1;
+      scale: 1;
+    }
+  }
+
+  .about-us-animation{
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
+
+  .carousel-section-animation{
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
+
+  @keyframes appear2 {
+    from {
+      opacity: 0;
+      transform: translateX(100px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
+
+  .iphone-mockup-animation{
+    animation: appear2 linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
+
+  @keyframes appear3 {
+    from {
+      opacity: 0;
+      transform: translateX(250px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
+
+  .card-animation{
+    animation: appear3 linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
+
+  @keyframes appear4 {
+    from {
+      opacity: 0;
+      transform: translateX(-250px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
+
+  .card-animation2{
+    animation: appear4 linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+  }
+
+  .title-animation{
+    color: transparent;
+    -webkit-text-stroke: 2px var(--det-color);
+    background-image: url(../assets/img/back.png);
+    -webkit-background-clip: text;
+    background-position: 0 0;
+    animation: back 20s linear infinite;
+  }
+
+  @keyframes back{
+    100%{
+      background-position: 2000px 0;
+    }
+  }
