--- a/src/style/Global.css
+++ b/src/style/Global.css
@@ -1,7 +1,7 @@
 :root{
-    --det-color: #212061;
-    --sec-color: #60bd5c;
-    --acc-color: #c3db60;
+    --det-color: #165740;
+    --sec-color: #bae874;
+    --acc-color: #e33100;
 }
 
 /* colore testo */
